# datalake

./: .gitignore  README.md  __init__.py  cli.py  config.yaml  dockerfile  main.py  pyproject.toml  requirements.txt  setup.py
athena/: README.md
client/: __init__.py  setup.py  test.ipynb  test.py
clients/: __init__.py  athena_client.py  duckdb_client.py
core/: __init__.py  datalake.py  schema.py
datalake/: __init__.py  main.py
datalake-prep/: README.md  commit_staging.py  config.py  make_schema_from_parquet.py  parquet_visualize.ipynb  publish_to_staging.py  resize_thread.py  s3_upload_parquet.py  utils.py
datalake/core/: client.py  (+3 more)
export/: base_kie_exporter.py  base_layout_exporter.py  dolphin_stage2_exporter.py  exporter.py  kie_struct_exporter.py  main.py  recognition_exporter.py  splitter.py  table_exporter.py  table_image_otsl_exporter.py  table_image_otsl_exporter_dataset.py  text_exporter.py  user_prompts.json  user_prompts.py  utils.py  vqa_exporter.py
managers/: __init__.py  cli.py  data_manager.py  data_processor.py  data_schema.py  datalake_client.py  logger.py  logging_setup.py  nas_api_server.py  nas_processor.py  processing_server.py  schema_manager.py  test.ipynb
notebooks/: test.ipynb
prep/: base_layout_image_extractor.py  base_layout_to_text.py  commit_staging.py  config.py  html_renderer.py  html_styler.py  html_utils.py  nested_table_synthesis.py  nested_table_synthesis2.py  publish_to_staging.py  resize_thread.py  table_containing_table_synthesis.py  table_html.py  table_html_to_table_image_otsl.py  table_image_html.py  table_image_html_to_table_image_otsl.py  table_nester.py  table_synthesis.py  to_base_layout_image.py  to_base_layout_table.py  to_base_layout_text.py  to_table_image_otsl.py  utils.py  utils_html.py
server/: app.py  processor.py
source/: README.md  aihub_download.sh  hf_download.ipynb  test.hwp  test.ipynb
utils/: config.py  logging.py
(+99 files in other folders)
