[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datalake"
version = "1.0.0"
description = "Multimodal data management with automatic processing, deduplication, and querying"
readme = "README.md"
authors = [{name = "KDL-Solution"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["datalake", "data-management", "multimodal", "datasets"]
requires-python = ">=3.8"

dependencies = [
    "datasets>=3.0.0",
    "pandas>=2.0.0",
    "Pillow>=10.0.0",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
    "duckdb>=0.9.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
aws = [
    "awswrangler>=3.0.0",
    "boto3>=1.28.0",
    "botocore>=1.31.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
all = [
    "awswrangler>=3.0.0",
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
datalake = "datalake.main:main"
datalake-server = "datalake.server.app:main"

[project.urls]
Homepage = "https://github.com/KDL-Solution/datalake"
Repository = "https://github.com/KDL-Solution/datalake"
Issues = "https://github.com/KDL-Solution/datalake/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88